# CubeSolver

./: Application.cpp  Application.h  CMakeLists.txt  Cubic.cpp  Cubic.h  CubicApp.cpp  CubicApp.h  CubicWorker.cpp  CubicWorker.h  Face.cpp  Face.h  Lab8.cpp  Menu.cpp  Menu.h  README.md  main.cpp  ogl_headers.h  readme.md
